--- a/portfolio.html
+++ b/portfolio.html
@@ -47,6 +47,8 @@
                 <img src="/images/photo4.jpg" alt="Photo 4" class="w-full h-auto rounded-lg shadow-md">
                 <img src="/images/photo5.jpg" alt="Photo 5" class="w-full h-auto rounded-lg shadow-md">
                 <img src="/images/photo6.jpg" alt="Photo 6" class="w-full h-auto rounded-lg shadow-md">
+                <img src="/images/photo7.jpg" alt="Photo 7" class="w-full h-auto rounded-lg shadow-md">
+
             </div>
         </div>
     </section>
