--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
         <div class="container mx-auto px-4">
             <h2 class="text-3xl font-bold mb-8 text-center">Photography Portfolio</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                <img src="/images/photo1.jpg" alt="Photo 1" class="w-full h-auto rounded-lg shadow-md">
+                <img src="/images/photo1.jpg" alt="Photo 1" class="w-auto h-auto rounded-lg shadow-md">
                 <img src="/images/photo2.jpg" alt="Photo 2" class="w-auto h-auto rounded-lg shadow-md">
                 <img src="/images/photo3.jpg" alt="Photo 3" class="w-auto h-auto rounded-lg shadow-md">
                 <img src="/images/photo4.jpg" alt="Photo 4" class="w-auto h-auto rounded-lg shadow-md">
