--- a/cat-gallery.html
+++ b/cat-gallery.html
@@ -117,8 +117,8 @@
                 </div>
                 <div class="md:w-2/3">
                     <h2 class="mb-4 text-2xl font-semibold">Bio</h2>
-                    <p class="mb-4 text-lg">This is my adorable cat, [Cat's Name]. [He/She] is a [breed] who joined our family in [year]. [He/She] loves [favorite activities], and [his/her] favorite food is [favorite food].</p>
-                    <p class="mb-4 text-lg">[Fun fact about your cat]. [Another fun fact].</p>
+                    <p class="mb-4 text-lg">Meet Eva! She's a tabby/tortoise mix who joined our family in August 2023. She loves anything that crinkles, and her favorite food is whatever we tell her not to eat.</p>
+                    <p class="mb-4 text-lg">Eva is a bit of a goofball. She often gets the zoomies and runs around the house at full speed. She's also a big fan of cardboard boxes.</p>
                     <div class="p-4 bg-yellow-100 border-l-4 border-yellow-400 rounded-lg">
                         <h3 class="mb-2 font-bold">Quick Facts</h3>
                         <ul class="pl-5 list-disc">
